fix: modify controllers
